@@ -89,6 +89,7 @@ const IdStrMap ff_img_tags[] = {
     { AV_CODEC_ID_GEM,        "timg"     },
     { AV_CODEC_ID_VBN,        "vbn"      },
     { AV_CODEC_ID_JPEGXL,     "jxl"      },
+    { AV_CODEC_ID_QOI,        "qoi"      },
     { AV_CODEC_ID_NONE,       NULL       }
 };
 
